--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lint": "prettier --check \"src/**/*.{ts,js}\""
   },
   "dependencies": {
-    "canvas-confetti": "^1.2.0"
+    "@snowpack/plugin-sass": "^1.4.0",
+    "canvas-confetti": "^1.2.0",
+    "leaflet": "^1.7.1"
   },
   "devDependencies": {
     "@snowpack/plugin-typescript": "^1.2.1",
